Added direct gfyoffinal

--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@ Finally, time to make the gif. Go to File&gt;Export As. Go to where you want the
 Be sure to test out your GIF on a browser before you publish it. Simply use your browser to open the GIF through File&gt;Open File. This ensures that your GIF is working properly, and looks right. As a final note, consider using a GIF conversion service such as gfycat.com or mediacru.sh. These services convert the GIF to a video which takes up a lot less bandwith and size than a GIF, and therefore makes the web better for everybody.</p>
 
 <p><a href="http://gfycat.com/GraciousBlushingGardensnake">http://gfycat.com/GraciousBlushingGardensnake</a>
-<img>
-And here you see the final product of this tutorial.</p>
+<img class="gfyitem" data-id="GraciousBlushingGardensnake" /></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/adohireporter">adohireporter</a></p>
